@startuml entity-relation

entity ai_model {
  * id : CHAR(32)
  * version : INTEGER
  * name : VARCHAR
  * model_tag : VARCHAR
  * source : VARCHAR(11)
  trained_from_id : CHAR(32)
  created_at : DATETIME
  updated_at : DATETIME
}

entity upload_dataset_task {
  * id : CHAR(32)
  tag : VARCHAR(128)
  task_status : VARCHAR(7)
  end_date : DATETIME
  error_msg : VARCHAR
  created_at : DATETIME
  updated_at : DATETIME
}

entity synthesis_task {
  * id : CHAR(32)
  task_status : VARCHAR(7)
  end_date : DATETIME
  error_msg : VARCHAR
  created_at : DATETIME
  updated_at : DATETIME
}

entity upload_task {
  * id : CHAR(32)
  tag : VARCHAR(128)
  task_status : VARCHAR(7)
  source : VARCHAR(11)
  end_date : DATETIME
  error_msg : VARCHAR
  created_at : DATETIME
  updated_at : DATETIME
}

entity dataset {
  * id : CHAR(32)
  version : INTEGER
  file_name : VARCHAR(255)
  name : VARCHAR(128)
  classification : VARCHAR(16)
  rows : INTEGER
  source : VARCHAR(11)
  created_at : DATETIME
  updated_at : DATETIME
  synthesis_id : CHAR(32)
}

entity training_task {
  * id : CHAR(32)
  task_status : VARCHAR(7)
  end_date : DATETIME
  error_msg : VARCHAR
  trained_model_id : CHAR(32)
  created_at : DATETIME
  updated_at : DATETIME
  validation_dataset_path : VARCHAR
  train_runtime : FLOAT
  train_samples_per_second : FLOAT
  train_steps_per_second : FLOAT
  train_loss : FLOAT
  epoch : FLOAT
}

entity evaluation_task {
  * id : CHAR(32)
  task_status : VARCHAR(7)
  end_date : DATETIME
  error_msg : VARCHAR
  model_id : CHAR(32)
  model_tag : VARCHAR
  dataset_info : VARCHAR
  baseline_model_tag : VARCHAR
  created_at : DATETIME
  updated_at : DATETIME
  progress : FLOAT
  evaluation_metrics : VARCHAR
  baseline_metrics : VARCHAR
  evaluation_summary : VARCHAR
}

entity inference_counter {
  * id : CHAR(32)
  ai_model_id : CHAR(32)
  created_at : DATETIME
}

ai_model::trained_from_id }o--|| ai_model::id : trained_from
dataset::synthesis_id }o--|| synthesis_task::id : synthesis
training_task::trained_model_id }o--|| ai_model::id : trained_model
evaluation_task::model_id }o--|| ai_model::id : model
inference_counter::ai_model_id }o--|| ai_model::id : ai_model

@enduml